--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "@nestjs/common": "^5.4.0",
     "@nestjs/core": "^5.4.0",
     "@nestjs/cqrs": "^5.1.1",
+    "@nestjs/swagger": "^2.5.1",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.2.2",
