--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,8 @@
     "@nestjs/cqrs": "^5.1.1",
     "@nestjs/swagger": "^2.5.1",
     "@nestjs/typeorm": "^5.2.2",
+    "class-transformer": "^0.2.0",
+    "class-validator": "^0.9.1",
     "pg": "^7.7.1",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
@@ -37,6 +39,8 @@
     "@types/jest": "^23.3.1",
     "@types/node": "^10.7.1",
     "@types/supertest": "^2.0.5",
+    "eslint": "^5.11.0",
+    "eslint-config-google": "^0.11.0",
     "jest": "^23.5.0",
     "nodemon": "^1.18.3",
     "prettier": "^1.14.2",
@@ -45,7 +49,8 @@
     "ts-loader": "^4.4.2",
     "ts-node": "^7.0.1",
     "tsconfig-paths": "^3.5.0",
-    "tslint": "5.11.0"
+    "tslint": "5.11.0",
+    "tslint-config-prettier": "^1.17.0"
   },
   "jest": {
     "moduleFileExtensions": [
