--- a/server/package.json
+++ b/server/package.json
@@ -65,5 +65,9 @@
     },
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "engines": {
+    "node": "10.11.0",
+    "npm": "6.5.0"
   }
 }
