--- a/server/package.json
+++ b/server/package.json
@@ -27,8 +27,11 @@
     "class-transformer": "^0.2.0",
     "class-validator": "^0.9.1",
     "dexie": "^2.0.4",
+    "envalid": "^4.1.4",
     "indexeddbshim": "^4.1.0",
     "pg": "^7.7.1",
+    "pino": "^5.10.6",
+    "pino-pretty": "^2.5.0",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.2.2",
@@ -40,6 +43,7 @@
     "@types/express": "^4.16.0",
     "@types/jest": "^23.3.1",
     "@types/node": "^10.7.1",
+    "@types/pino": "^5.8.3",
     "@types/supertest": "^2.0.5",
     "eslint": "^5.11.0",
     "eslint-config-google": "^0.11.0",
