--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ramda": "^0.26.1",
+    "register-service-worker": "^1.5.2",
     "vue": "^2.5.21",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
@@ -15,12 +17,16 @@
     "vue-socket.io-extended": "^3.2.1",
     "vuetify": "^1.3.0",
     "vuex": "^3.0.1",
+    "vuex-class": "^0.3.1",
+    "vuex-module-decorators": "^0.9.7",
     "vuex-typescript": "^3.0.2"
   },
   "devDependencies": {
+    "@types/ramda": "^0.25.47",
     "@vue/cli-plugin-babel": "^3.3.0",
     "@vue/cli-plugin-eslint": "^3.3.0",
-    "@vue/cli-plugin-typescript": "^3.3.0",
+    "@vue/cli-plugin-pwa": "^3.4.0",
+    "@vue/cli-plugin-typescript": "^3.4.0",
     "@vue/cli-service": "^3.3.0",
     "@vue/eslint-config-airbnb": "^4.0.0",
     "@vue/eslint-config-typescript": "^3.2.0",
@@ -31,11 +37,10 @@
     "eslint-plugin-vue": "^5.0.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
-    "typescript": "~3.1.1",
+    "typescript": "~3.2.2",
     "vue-cli-plugin-vuetify": "^0.4.6",
     "vue-template-compiler": "^2.5.21",
     "vuetify-loader": "^1.0.5",
-    "vuex-class": "^0.3.1",
-    "vuex-module-decorators": "^0.9.7"
+    "webpack": "^4.29.0"
   }
 }
