--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "ramda": "^0.26.1",
     "register-service-worker": "^1.5.2",
     "vue": "^2.5.21",
