--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -14,7 +14,8 @@
     "baseUrl": ".",
     "types": ["webpack-env"],
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      "@core": ["../core/src"]
     },
     "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
   },
