--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -15,7 +15,7 @@
     "outDir": "./dist",
     "baseUrl": "./",
     "paths": {
-      "@core": ["../core"]
+      "@core": ["../core/src"]
     }
   },
   "include": ["src/**/*"],
