--- a/server/package.json
+++ b/server/package.json
@@ -19,15 +19,17 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^5.4.0",
-    "@nestjs/core": "^5.4.0",
+    "@nestjs/common": "^5.7.2",
+    "@nestjs/core": "^5.7.2",
     "@nestjs/cqrs": "^5.1.1",
     "@nestjs/swagger": "^2.5.1",
     "@nestjs/typeorm": "^5.2.2",
     "class-transformer": "^0.2.0",
+    "class-transformer-validator": "^0.6.0",
     "class-validator": "^0.9.1",
     "dexie": "^2.0.4",
     "envalid": "^4.1.4",
+    "firebase-admin": "^7.0.0",
     "indexeddbshim": "^4.1.0",
     "pg": "^7.7.1",
     "pino": "^5.10.6",
@@ -36,10 +38,10 @@
     "rimraf": "^2.6.2",
     "rxjs": "^6.2.2",
     "typeorm": "^0.2.9",
-    "typescript": "^3.0.1"
+    "typescript": "^3.3.3"
   },
   "devDependencies": {
-    "@nestjs/testing": "^5.1.0",
+    "@nestjs/testing": "^5.7.2",
     "@types/express": "^4.16.0",
     "@types/jest": "^23.3.1",
     "@types/node": "^10.7.1",
@@ -49,7 +51,7 @@
     "eslint-config-google": "^0.11.0",
     "jest": "^23.5.0",
     "nodemon": "^1.18.3",
-    "prettier": "^1.14.2",
+    "prettier": "^1.16.4",
     "supertest": "^3.1.0",
     "ts-jest": "^23.1.3",
     "ts-loader": "^4.4.2",
