--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,20 +3,17 @@
   // Hover to view descriptions of existing attributes.
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
-  "configurations": [{
-    "name": "Debug Jest tests",
-    "type": "node",
-    "request": "launch",
-    "program": "${workspaceRoot}\\node_modules\\jest\\bin\\jest.js",
-    "args": [
-      "--runInBand",
-      "--no-cache"
-    ],
-    "runtimeArgs": [
-      "--inspect-brk"
-    ],
-    "cwd": "${workspaceRoot}",
-    "protocol": "inspector",
-    "console": "integratedTerminal"
-  }]
+  "configurations": [
+    {
+      "name": "Debug Jest tests",
+      "type": "node",
+      "request": "launch",
+      "program": "${workspaceRoot}\\node_modules\\jest\\bin\\jest.js",
+      "args": ["--runInBand", "--no-cache"],
+      "runtimeArgs": ["--inspect-brk"],
+      "cwd": "${workspaceRoot}",
+      "protocol": "inspector",
+      "console": "integratedTerminal"
+    }
+  ]
 }
