--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -26,5 +26,10 @@
     "tests/**/*.ts",
     "tests/**/*.tsx"
   ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "references": [
+    {
+      "path": "../core"
+    }
+  ]
 }
