--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "firebase": "^5.8.5",
     "ramda": "^0.26.1",
     "register-service-worker": "^1.5.2",
     "vue": "^2.5.21",
@@ -19,6 +20,7 @@
     "vuetify": "^1.3.0",
     "vuex": "^3.0.1",
     "vuex-class": "^0.3.1",
+    "vuex-easy-firestore": "^1.29.2",
     "vuex-module-decorators": "^0.9.7",
     "vuex-typescript": "^3.0.2"
   },
